# similaritycache

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/simcache/: __init__.py  node.py
src/similaritycache/: __init__.py  cache.py
tests/: test_exact_match.py  test_similarity_search.py
