[project]
name = "simcache"
version = "0.1.0"
description = "In-memory similarity cache"
readme = "README.md"
authors = [
    { name = "Dênis Araújo da Silva", email = "silvadenisaraujo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.5",
    "sentence-transformers>=5.2.0",
]

[project.scripts]
simcache = "simcache:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.9",
]
